cssMemSlider/style.css
body {
    background-color: gray;
    color: white;
    font-family: Arial, sans-serif;
    font-weight: 500;
}
.slider {
    margin: 0 auto;
    width: 40vw;
    display: grid;
    grid-template-areas:
            "slides slides"
            "text bullets";
    grid-template-columns: 1fr 12rem;
    column-gap: 1.5rem;
    row-gap: 5vh;
    align-items: center;
}

.slides {
    margin: 5% auto 0;
    max-height: 40vw;
    width: 40vw;
    overflow: hidden;
    grid-area: slides;
    border-radius: 0.8rem;
    box-shadow: 0 0 0.8rem rgba(0, 0, 0, 0.3);
}
.slidesWrapper {
    display: grid;
    transition: transform 0.3s ease-in-out;
    grid-template-columns: repeat(4, 40vw);
}
.slide {
    max-height: 40vh;
    display: flex;
    justify-content: center;
    background-color: black;
}

.slide:nth-child(1) {
    background: url('./memes/mem0.jpeg') center/cover no-repeat;
}
.slide:nth-child(2) {
    background: url('./memes/mem1.jpeg') center/cover no-repeat;
}
.slide:nth-child(3) {
    background: url('./memes/mem2.jpeg') center/cover no-repeat;
}
.slide:nth-child(4) {
    background: url('./memes/mem3.jpg') center/cover no-repeat;
}

.slide img {
    object-fit: contain;
    height: 100%;
    width: 100%;
    backdrop-filter: blur(1.2rem);
}
.text {
    grid-area: text;
    overflow: hidden;
    display: block;
}

.textItem {
    font-size: 1.5rem;
}
.textWrapper {
    display: grid;
    transition: transform 0.4s ease-in-out;
    grid-template-columns: repeat(4, calc(40vw));
}
.bullets {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    grid-area: bullets;
}

.bullets a {
    display: block;
    padding: 0.5rem;
    border-radius: 50%;
    color: dodgerblue;
    transition: color 0.4s ease-in-out;
}

.bullets a i {
    display: block;
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
    border: 0.2rem solid currentColor;
    background-color: transparent;
}

.bullets a+a i {
    background-color: currentColor;
}
.bullets a:hover {
    color: white;
}
.bullets a:active {
    color: dodgerblue;
}

body i:target ~.slider .bullets a i {
    background-color: currentColor;
}
#mem0:target ~.slider>.bullets>a:nth-child(1)>i {
    background-color: transparent;
}
#mem1:target ~.slider>.bullets>a:nth-child(2)>i {
    background-color: transparent;
}
#mem2:target ~.slider>.bullets>a:nth-child(3)>i {
    background-color: transparent;
}
#mem3:target ~.slider>.bullets>a:nth-child(4)>i {
    background-color: transparent;
}

#mem0:target ~ .slider .slidesWrapper {
    transform: translateX(0);
}
#mem1:target ~ .slider .slidesWrapper {
    transform: translateX(-40vw);
}
#mem2:target ~ .slider .slidesWrapper {
    transform: translateX(calc(-40vw * 2));
}
#mem3:target ~ .slider .slidesWrapper {
    transform: translateX(calc(-40vw * 3));
}

#mem0:target ~ .slider .textWrapper {
    transform: translateX(0);
}
#mem1:target ~ .slider .textWrapper {
    transform: translateX(-40vw);
}
#mem2:target ~ .slider .textWrapper {
    transform: translateX(calc(-40vw * 2));
}
#mem3:target ~ .slider .textWrapper {
    transform: translateX(calc(-40vw * 3));
}

@media (max-width: 900px) {
    .slider {
        margin: 0 auto;
        width: 40vw;
        max-height: 40vh;
        display: grid;
        grid-template-areas:
            "slides slides"
            "bullets bullets"
            "text text";
        row-gap: 1vh;
    }
    .textItem {
        font-size: 1rem;
    }
    .bullets {
        justify-content: center;
    }
    .bullets a i {
        display: block;
        height: 0.8rem;
        width: 0.8rem;
        border-radius: 50%;
        border: 0.1rem solid currentColor;
    }
}

